@@ -1,0 +1,1 @@
+A ICON MOVEABLE PURE LOADONCALL DISCARDABLE "../icons/win32/glom.ico"
